--- a/readme.html
+++ b/readme.html
@@ -48,13 +48,13 @@
 
         </ol>
 
-        <p>For usage, the best thing is to click through the <a href="http://pius.github.com/connie">documentation</a>. I tried to make it really thorough. If you need more guidance, check out the specs, which demonstrate precisely how to feed Connie a SPARQL query parse tree and run the engine.</p>
+        <p>For usage, the best thing is to click through the <a href="http://pius.github.com/connie">documentation</a>. If you need more guidance, check out the specs, which demonstrate precisely how to feed Connie a SPARQL query parse tree and run the engine.</p>
 
         <ol>
         <li><strong>Contribute!</strong></li>
         </ol>
 
-        <p>Fork my <a href="http://github.com/pius/sparql">repository</a>, make some changes, and send along a pull request!</p>
+        <p>Fork my <a href="http://github.com/pius/connie">repository</a>, make some changes, and send along a pull request!</p>
 
         <p>The best way to contribute is to add a unit test for a specific SPARQL parse tree and then tweak the code such that your new test case plus all the others pass.</p>
 
